--- a/templates/ScreeningApp/screening_submission.html
+++ b/templates/ScreeningApp/screening_submission.html
@@ -15,9 +15,9 @@
 <div class="banner-wrap">
   <div class="content-width sm-content-width">
       <div class="banner__main">
-          <h1>Signup as a Mentor</h1>
-          <p class="large"> Inviting technology leaders with hands-on sofware engineering expertise to adopt a project
-              and guide our community of coders
+          <h1>Lets get to know you better</h1>
+          <p class="large"> Please take a minute to answer the following questions, so that we can understand your level of
+            expertise.
           </p>
       </div>
   </div>
