Email template modified

--- a/templates/HFC/screening_email.html
+++ b/templates/HFC/screening_email.html
@@ -31,7 +31,8 @@
                     </tbody>
                   </table>
                   <p>Best,<br>
-                  HFC Core Team</p>
+                    Suman Tyaagi<br>
+                    For HackForChange</p>
                 </td>
               </tr>
             </table>
