--- a/templates/HFC/community_member_welcome_email.html
+++ b/templates/HFC/community_member_welcome_email.html
@@ -11,9 +11,8 @@
         <tr>
           <td>
             <p>Dear {{name}},</p>
-            <p>Thank you for signing up to become a mentor. One of our core team members, 
-                will review your profile and reach out to you directly.</p>
-            <p>In the meanwhile we encourage you to review our ongoing projects and also related documentation.</p>
+            <p>Thank you for signing up as a member of our community. Please check out our ongoing projects and understand how you can contribute further.</p>
+            <p>We need active help from both working and non-working professionals like you, to affect social change.</p>
               <table role="presentation" border="0" cellpadding="0" cellspacing="0" class="btn btn-primary">
               <tbody>
                   <tr>
