Screening results page added

--- a/templates/HFC/community_member_welcome_email.html
+++ b/templates/HFC/community_member_welcome_email.html
@@ -20,7 +20,7 @@
                         <table role="presentation" border="0" cellpadding="0" cellspacing="0">
                            <tbody>
                               <tr>
-                              <td> <a href="" target="_blank">Link to our projects</a> </td>
+                              <td> <a href="https://www.hackforchange.co.in/projects" target="_blank">Link to our projects</a> </td>
                                     
                               </tr>
                             </tbody>
