--- a/templates/ScreeningApp/screening_submission.html
+++ b/templates/ScreeningApp/screening_submission.html
@@ -35,6 +35,9 @@
                 {%for i in question.question.all%}
                 <div class="form-field" style="margin-bottom: 5px;">
                   <label for="" >{{forloop.parentloop.counter}}. {{i.question}}</label>
+                  {% if i.question_img %}
+                    <img src="{{i.question_img}}" alt="image">
+                  {% endif%}
               </div>
               <input type="radio" id={{question.id}} name={{question.id}} disabled='disabled' value="option_1" {% if question.candidate_ans == "option_1" %} checked{% endif %}  />
               <label for="option_1">{{i.option_1}}</label><br>
