Screening pages updated

--- a/templates/HFC/center_contributor_signup.html
+++ b/templates/HFC/center_contributor_signup.html
@@ -57,8 +57,8 @@
                     </div>
                     
                     <div class="form-control">
-                        <div class="form-field">
-                            <label for="">GitHub Profile</label>
+                        <div class="form-field" >
+                            <label for="" style="font-weight:350;">GitHub Profile</label>
                             {{form.coder_profile}}
                         </div>
                         <div class="form-field">
