--- a/templates/HFC/contact_thanks.html
+++ b/templates/HFC/contact_thanks.html
@@ -19,7 +19,7 @@
             </div>
         </div>
     </div>
-    </div>
+</div>
     <!--Banner end -->
 <!-- Main starts -->
 <div class="content-width">
@@ -28,10 +28,8 @@
                 <img src="{% static 'images/thank-you-img.svg' %}"> 
             </div>
             <div class="thanku-heading">
-                <h3>Congratulations !! You passed with flying colors.</h3>
-               <h3>One of our team members, will reach out to you directly to get you started. 
-                   In the meanwhile, please check out the problem statements and ongoing projects <a href="https://www.hackforchange.co.in/projects" target="_blank">here.  </a> 
-                </h3>
+               <h3>Thank you for contacting us. One of our team members will address your concerns soon.</h3>
+               <h3>In the meanwhile, please consider joining our <a href="https://www.hackforchange.co.in/community" target="_blank">community</a> or visiting our social pages.</h3>
                
            </div>
         </div>
