--- a/templates/HFC/footer.html
+++ b/templates/HFC/footer.html
@@ -65,6 +65,14 @@
                                 src="{% static 'images/insta-icon.svg' %}" alt="Icon"></a></li>
                     <li><a href="https://www.linkedin.com/showcase/hack-for-change"><img width="31"
                                 src="{% static 'images/linkedin-icon.svg' %}" alt="Icon"></a></li>
+                    
+                </ul>
+                <ul>
+                    <li><a href="https://twitter.com/"><img width="31"
+                            src="{% static 'images/twitter-img.png' %}" alt="Icon"></a></li>
+                    <li><a href="https://github.com/CTSC/HFC"><img width="31"
+                            src="{% static 'images/github-img.png' %}" alt="Icon"></a></li>
+
                 </ul>
                 <a href="{% url 'donate' %}" class="btn btn--border">Donate</a>
             </div>
