--- a/templates/HFC/admin_email.html
+++ b/templates/HFC/admin_email.html
@@ -21,7 +21,7 @@
                         <table role="presentation" border="0" cellpadding="0" cellspacing="0">
                            <tbody>
                               <tr>
-                              <td> <a href="" target="_blank">Link to our projects</a> </td>
+                              <td> <a href="" target="_blank">View projects</a> </td>
                                     
                               </tr>
                             </tbody>
