--- a/templates/HFC/community_signup_thanks.html
+++ b/templates/HFC/community_signup_thanks.html
@@ -11,16 +11,6 @@
 {% endblock %}
 {% block title %} Thanks | Hack For Change {% endblock %}
 {% block main %}
-<!--Banner start -->
-<div class="banner-wrap">
-        <div class="content-width sm-content-width">
-            <div class="banner__main">
-                   
-            </div>
-        </div>
-    </div>
-    </div>
-    <!--Banner end -->
 <!-- Main starts -->
 <div class="content-width">
         <div class="thanku-main">
@@ -28,10 +18,8 @@
                 <img src="{% static 'images/thank-you-img.svg' %}"> 
             </div>
             <div class="thanku-heading">
-                <h3>Congratulations !! You passed with flying colors.</h3>
-               <h3>One of our team members, will reach out to you directly to get you started. 
-                   In the meanwhile, please check out the problem statements and ongoing projects <a href="https://www.hackforchange.co.in/projects" target="_blank">here.  </a> 
-                </h3>
+               <h3>Thank you for signing up as a community member. We will keep you posted on the latest news, events and updates from the community.</h3>
+               
                
            </div>
         </div>
