--- a/templates/HFC/screening_email.html
+++ b/templates/HFC/screening_email.html
@@ -21,7 +21,7 @@
                         <table role="presentation" border="0" cellpadding="0" cellspacing="0">
                            <tbody>
                               <tr>
-                              <td> <a href="{{base_url}}{{screeninguuid}}" target="_blank">Link to screening</a> </td>
+                              <td> <a href="{{base_url}}{{screeninguuid}}" target="_blank">Get started</a> </td>
                                     
                               </tr>
                             </tbody>
