--- a/templates/ScreeningApp/screening_completed.html
+++ b/templates/ScreeningApp/screening_completed.html
@@ -9,17 +9,16 @@
 <meta property="og:image" content="https://www.hackforchange.co.in/static/images/hfc.png">
 <meta property="og:url" content="">
 {% endblock %}
-{% block title %} Thanks | Hack For Change {% endblock %}
+{% block title %} Screening | Hack For Change {% endblock %}
 {% block main %}
 <!-- Main starts -->
 <div class="content-width">
         <div class="thanku-main">
             <div class="thanku-main-img">
-                <img src="{% static 'images/thank-you-img.svg' %}"> 
+                <!----<img src="{% static 'images/thank-you-img.svg' %}"> -->
             </div>
             <div class="thanku-heading">
-               <h3>Thanks for attending the test.<br>
-                We will get back to you shortly!!!</h3>
+               <h3>Looks like you have already taken the screening.</h3>
                
            </div>
         </div>
