Change in thank you pages

--- a/templates/ScreeningApp/screening_result_pass.html
+++ b/templates/ScreeningApp/screening_result_pass.html
@@ -15,12 +15,12 @@
 <div class="banner-wrap">
         <div class="content-width sm-content-width">
             <div class="banner__main">
-                   
+                <h1>Result</h1>     
             </div>
         </div>
     </div>
-    </div>
-    <!--Banner end -->
+</div>
+<!--Banner end -->
 <!-- Main starts -->
 <div class="content-width">
         <div class="thanku-main">
