Thank you pages modified

--- a/templates/HFC/center_signup_thanks.html
+++ b/templates/HFC/center_signup_thanks.html
@@ -28,7 +28,7 @@
                 <img src="{% static 'images/thank-you-img.svg' %}"> 
             </div>
             <div class="thanku-heading">
-               <h3>Thank you for signing up to join "Hack For Change {{chapter_name}}". We want to understand your capabilities a little more. 
+               <h3>Thank you for signing up to join "Hack For Change {{center_name}}". We want to understand your capabilities a little more. 
                    We see this as the best way to involve you in the right project.</h3>
                 <h3>Please check your email to get started.</h3>
                
