--- a/templates/ScreeningApp/screening_submission.html
+++ b/templates/ScreeningApp/screening_submission.html
@@ -41,16 +41,16 @@
               </div>
               <input type="radio" id={{question.id}} name={{question.id}} disabled='disabled' value="option_1" {% if question.candidate_ans == "option_1" %} checked{% endif %}  />
               <label for="option_1">{{i.option_1}}</label><br>
-              <input type='hidden' name={{question.id}} value="option_1" />
+              
               <input type="radio" id={{question.id}} name={{question.id}} disabled='disabled' value="option_2" {% if question.candidate_ans == "option_2" %} checked{% endif %}/>
               <label for="option_2">{{i.option_2}}</label><br>
-              <input type='hidden' name={{question.id}} value="option_2" />
+              
               <input type="radio" id={{question.id}} name={{question.id}} disabled='disabled' value="option_3" {% if question.candidate_ans == "option_3" %} checked{% endif %} />
-              <label for="option_1">{{i.option_3}}</label><br>
-              <input type='hidden' name={{question.id}} value="option_3" />
+              <label for="option_3">{{i.option_3}}</label><br>
+              
               <input type="radio" id={{question.id}} name={{question.id}} disabled='disabled' value="option_4" {% if question.candidate_ans == "option_4" %} checked{% endif %} />
               <label for="option_4">{{i.option_4}}</label><br>
-              <input type='hidden' name={{question.id}} value="option_4" />
+              <input type='hidden' name={{question.id}} value=" " />
               {%endfor%}
               {%endfor%}
           <input type="submit" class="btn btn-success btn-lg" value="Submit">
