thank you pages added

--- a/templates/andablog/entry_detail.html
+++ b/templates/andablog/entry_detail.html
@@ -19,7 +19,16 @@
 
 {% block andablog_content %}
 {% load static %}
-
+<!--Banner start -->
+<div class="banner-wrap">
+    <div class="content-width sm-content-width">
+        <div class="banner__main">
+            <h1>Latest updates</h1>     
+        </div>
+    </div>
+</div>
+</div>
+<!--Banner end -->
 <div id="main-wrap" class="main__md-pd">
     <div class="content-width">
             <div class="main">
