--- a/templates/HFC/about.html
+++ b/templates/HFC/about.html
@@ -57,7 +57,7 @@
                                 <img src="{% static 'images/srini.png' %}" alt="Pic">
                             </div>
                             <div class="about-team__info">
-                                <h4>Srinivas Aki <span>Program Director</span></h4>
+                                <h4>Srinivas Aki <span>Program Manager</span></h4>
                                 <p>Leads the complete hackforchange, including its vision, outreach and program
                                     execution</p>
                             </div>
