--- a/templates/HFC/community_signup_thanks.html
+++ b/templates/HFC/community_signup_thanks.html
@@ -1,7 +1,6 @@
 {% extends 'HFC/layout.html' %}
 {% load static %}
 {% block meta_tags %}
-
 <meta content="" name="keywords">
 <meta property="og:title" content="">
 <meta name="description" property="og:description" content="">
@@ -14,8 +13,7 @@
 <!--Banner start -->
 <div class="banner-wrap">
     <div class="content-width sm-content-width">
-        <div class="banner__main">
-               
+        <div class="banner__main">     
         </div>
     </div>
 </div>
@@ -28,11 +26,11 @@
                 <img src="{% static 'images/thank-you-img.svg' %}"> 
             </div>
             <div class="thanku-heading">
-               <h3>Thank you for signing up as a community member. We will keep you posted on the latest news, events and updates from the community.</h3>
-               
-               
+               <h3>Thank you for signing up as a community member. We will keep you posted on the latest news, 
+                events and updates from the community.</h3>
            </div>
         </div>
     </div>
 <!-- Main Ends -->
 {%endblock%}
+
