Leader board file updated

--- a/templates/HFC/community.html
+++ b/templates/HFC/community.html
@@ -47,8 +47,7 @@
                             <p class="large sbold">{{center.organization_name}}</p>
                             <p>{{center.project.count}} Projects, {{center.community_member_set.count}} Members</p>
                             <a href="center/{{center.organization_name_slug}}/signup/" class="btn btn--hfc"
-                                id="center_contrib">Join as a
-                                Contributor</a>
+                                id="center_contrib">Join as a Contributor</a>
                         </div>
                     </div>
                     {% endfor %}
