ScreeningApp views updated

--- a/templates/ScreeningApp/screening_result_fail.html
+++ b/templates/ScreeningApp/screening_result_fail.html
@@ -25,7 +25,7 @@
 <div class="content-width">
         <div class="thanku-main">
             <div class="thanku-main-img">
-                <img src="{% static 'images/thank-you-img.svg' %}">
+                <img src="{% static 'images/fail.jpg' %}" style = "width:500px;">
             </div>
             <div class="thanku-heading">
                <h3>Unfortunately, you did not clear our screening test. We understand that you want to contribute to social change. 
