Blog app created

--- a/templates/HFC/footer.html
+++ b/templates/HFC/footer.html
@@ -1,4 +1,4 @@
-{% load static from staticfiles %}
+{% load static  %}
 <!--footer start -->
 <div class="subscription-wrap">
     <div class="content-width md-content-width">
