--- a/templates/HFC/about.html
+++ b/templates/HFC/about.html
@@ -1,5 +1,5 @@
 {% extends 'HFC/layout.html' %}
-{% load static from staticfiles %}
+{% load static  %}
 {% block title %} About | Hack For Change {% endblock %}
 {% block meta_tags %}
 <meta content="" name="keywords">
