--- a/templates/HFC/layout.html
+++ b/templates/HFC/layout.html
@@ -54,7 +54,7 @@
                             <li class="{% if url_name == 'community' %}active{% endif %}">
                                 <a href="{% url 'community' %}">Community</a></li>
                             <li class="{% if url_name == 'andablog' %}active{% endif %}">
-                                <a href="{% url 'andablog:entrylist' %}">Blog</a></li>
+                                <a href="{% url 'blog' %}">Blog</a></li>
                             <li class="menu__hasChild"><a href="{% url 'about' %}">About</a>
                                 <div class="sub-menu__outer">
                                     <ul class="sub-menu">
