--- a/templates/HFC/problem_statements_with_issue_area.html
+++ b/templates/HFC/problem_statements_with_issue_area.html
@@ -1,5 +1,5 @@
 {% extends 'HFC/layout.html' %}
-{% load static from staticfiles %}
+{% load static %}
 {% block meta_tags %}
 <meta content="" name="keywords">
 <meta property="og:title" content="">
