Issue area list page updated

--- a/templates/HFC/hfc_home.html
+++ b/templates/HFC/hfc_home.html
@@ -43,7 +43,7 @@
                     <h2>Our focus areas</h2>
                     <p> Our primary focus is on empowering lasting social change by improving ones' relationship with
                         the government and also with his community as a whole.</p>
-                    <a class="btn btn--border" href="{% url 'projects'%}">Read More</a>
+                    <a class="btn btn--border" href="{% url 'issue_areas'%}">Read More</a>
                 </div>
             </div>
         </div>
