--- a/templates/HFC/problem_statements_submit.html
+++ b/templates/HFC/problem_statements_submit.html
@@ -24,9 +24,10 @@
 <!--Banner end -->
 <!--main start -->
 <div id="main-wrap" class="main__large-pd">
-    <div class="content-width">
-        <div class="main">
+    <div class="content-width">    
+        <div class="main">   
             <section id="contents">
+                <h2 style="padding-bottom: 20px;">Suggest a problem statement</h2>    
                 <form class="site-form" action="" method="post">
                     {%csrf_token%}
                     <div class="form-field">
