--- a/templates/HFC/issue_area_detail.html
+++ b/templates/HFC/issue_area_detail.html
@@ -9,7 +9,7 @@
 <meta property="og:url" content="https://hackforchange.co/problem-statements/{{problem.title_slug}}">
 {% endblock %}
 {% load static  %}
-{% block title %} Issue Areas | Hack For Change {% endblock %}
+{% block title %} Focus Areas | Hack For Change {% endblock %}
 
 {% block main %}
 <!--Banner start -->
@@ -38,11 +38,9 @@
                         <p style="text-align:justify;">{{issue.context |safe}}</p>
                         <p class="large sbold">Technology and {{issue.issue_area}}</p>
                         <p style="text-align:justify;">{{issue.technology_intervention |safe}}</p>
-                        <p class="large sbold">Related Informations</p>
+                        <p class="large sbold">Related links</p>
                         {% if issue.related_information %}
                         <p><a href={{issue.related_information}} >{{issue.related_information |safe}}</a></p>
-                        {% else %}
-                        <p>_</p>
                         {% endif %}
                         <p class="large sbold"></p>
                         <p style="text-align:justify;"></p>
@@ -55,7 +53,7 @@
                     <p>Explore problem statements across various issue areas</p>
                     <ul>
                         {% for issue_area in issue_areas %}
-                    <li><a href="{% url 'problem_statements_with_issuearea' issue_area.issue_area_slug %}">{{issue_area.issue_area}}</a></li>
+                    <li><a href="{% url 'issue_area' issue_area.issue_area_slug %}">{{issue_area.issue_area}}</a></li>
                         {% endfor %}
                     </ul>
                 </div>
