--- a/templates/HFC/project_detail.html
+++ b/templates/HFC/project_detail.html
@@ -9,14 +9,14 @@
 <meta property="og:url" content="https://hackforchange.co/problem-statements/{{problem.title_slug}}">
 {% endblock %}
 {% load static  %}
-{% block title %} Project Detail | Hack For Change {% endblock %}
+{% block title %} Project Details | Hack For Change {% endblock %}
 
 {% block main %}
 <!--Banner start -->
 <div class="banner-wrap">
         <div class="content-width sm-content-width">
             <div class="banner__main">
-                <h1>Project</h1>
+                <h1>{{project.name}}</h1>
                 <p class="large">Ongoing solutions designed and developed to empower citizens</p>
                 <a class="btn btn--info" href="{% url 'mentor_signup' %}">Signup as a Mentor</a>
             </div>
@@ -30,20 +30,25 @@
         <div class="main">
         	<section id="contents">
                 <div class="blog-single">
-                    <h3>{{issue.issue_area}}</h3>
+                    <h3>{{project.name}}</h3>
                     <div class="blog-single__content">
-                        <p class="large sbold">Definition</p>
-                        <p style="text-align:justify;">{{issue.definition}}</p>
                         <p class="large sbold">Description</p>
-                        <p style="text-align:justify;">{{issue.description}}</p>
-                        <p class="large sbold">Related Links</p>
-                        {% if issue.related_link %}
-                        <p><a href={{issue.related_link}} >{{issue.related_link}}</a></p>
-                        {% else %}
-                        <p>_</p>
+                        <p style="text-align:justify;">{{project.project_desc}}</p>
+                        <p class="large sbold">Github link</p>
+                        <p style="text-align:justify;">{{project.project_link}}</p>
+                        {% if project.website_link %}
+                        <p class="large sbold">Website Link</p>
+                        <p><a href={{project.website_link}} >{{project.website_link}}</a></p>
                         {% endif %}
-                        <p class="large sbold"></p>
-                        <p style="text-align:justify;"></p>
+                        <p class="large sbold">Execution Partners</p>
+                            {% for item in partners.execution%}   
+                        <p style="text-align:justify;">{{item.get_partner}}</p>
+                        {% endfor %}
+                        <p></p>
+                        <p class="large sbold">Funding Partners</p>
+                            {% for item in partners.funding%}
+                        <p style="text-align:justify;">{{item.get_partner}}</p>
+                            {% endfor %}  
                     </div>
                 </div>
             </section>
